--- a/config/cloudinary.yml
+++ b/config/cloudinary.yml
@@ -1,16 +1,17 @@
----
 development:
   cloud_name: alfredhdz
   api_key: '388733958349314'
   api_secret: I5KJg2WakCDhH70YpbxMTmQmPj0
   enhance_image_tag: true
   static_image_support: false
+  secure: true
 production:
   cloud_name: alfredhdz
   api_key: '388733958349314'
   api_secret: I5KJg2WakCDhH70YpbxMTmQmPj0
   enhance_image_tag: true
   static_image_support: true
+  secure: true
 test:
   cloud_name: alfredhdz
   api_key: '388733958349314'
